--- a/distribuidora-front/src/app/app.component.css
+++ b/distribuidora-front/src/app/app.component.css
@@ -1,41 +1,14 @@
-mat-sidenav-container, mat-sidenav-content, mat-sidenav {
-  height: 100%;
+.example-card {
+  margin-bottom: 8px;
 }
 
-mat-sidenav {
-  width: 250px;
+.pesquisar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-a {
-  text-decoration: none;
-  color: white;
-}
-
-a:hover,
-a:active {
-  color: lightgray;
-}
-
-.navigation-items {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  cursor: pointer;
-}
-
-.icon {
-  display: inline-block;
-  height: 30px;
-  margin: 0 auto;
-  padding-right: 5px;
-  text-align: center;
-  vertical-align: middle;
-  width: 15%;
-}
-
-.label {
-  display: inline-block;
-  line-height: 30px;
-  margin: 0;
-  width: 85%;
+.example-spacer {
+  flex: 1 1 auto;
 }
