--- a/distribuidora-front/src/app/components/shopping-cart/shopping-cart.component.html
+++ b/distribuidora-front/src/app/components/shopping-cart/shopping-cart.component.html
@@ -1,7 +1,13 @@
-<h2>Shopping cart no ar</h2>
-
 <mat-selection-list #items>
   <mat-list-item *ngFor="let item of itemsOfCart">
     <p>{{ item }}</p>
   </mat-list-item>
 </mat-selection-list>
+
+<mat-card>
+  <h2>Resumo do Pedido</h2>
+  <p>3 produtos    R$ 300,00</p>
+  <button mat-stroked-button color="primary" (click)="informarEndereco()">Informar endereço de entrega</button>
+</mat-card>
+
+
