--- a/distribuidora-front/src/app/app.component.html
+++ b/distribuidora-front/src/app/app.component.html
@@ -1,3 +1,17 @@
-<menu></menu>
+<p>
+  <mat-toolbar [style.background-color]="'#82846D'">
+    <span class="title" routerLink="/">Distribuidora de Produtos</span>
+    <span class="example-spacer"></span>
+    <button
+      mat-icon-button
+      class="example-icon favorite-icon"
+      aria-label="Example icon-button with heart icon"
+      (click)="abrirCarrinho()"
+    >
+      <mat-icon [matBadge]="numberOfItemsInCart" matBadgeColor="warn" style="color: white">shopping_cart_checkout</mat-icon>
+    </button>
+  </mat-toolbar>
+</p>
+
 <barra-pesquisa></barra-pesquisa>
 <router-outlet></router-outlet>
