--- a/distribuidora-front/src/app/components/main/main.component.html
+++ b/distribuidora-front/src/app/components/main/main.component.html
@@ -1,8 +1,8 @@
 <mat-grid-list cols="4" gutterSize="20" rowHeight="1:1">
-  <mat-grid-tile *ngFor="let produto of produtos">
+  <mat-grid-tile *ngFor="let product of products">
     <mat-card [style]="'max-width: 400px'">
       <mat-card-header>
-        <mat-card-title>{{ produto.name }}</mat-card-title>
+        <mat-card-title>{{ product.name }}</mat-card-title>
       </mat-card-header>
       <img
         mat-card-md-image
@@ -13,10 +13,10 @@
         <p>
           Descrição do produto
         </p>
-        <p>{{ produto.price }}</p>
+        <p>{{ product.price }}</p>
       </mat-card-content>
       <mat-card-actions>
-        <button mat-button (click)="adicionarCarrinho(produto.id)">Comprar</button>
+        <button mat-button (click)="adicionarCarrinho(product.id)">Comprar</button>
       </mat-card-actions>
     </mat-card>
   </mat-grid-tile>
