--- a/distribuidora-front/src/app/components/main/main.component.html
+++ b/distribuidora-front/src/app/components/main/main.component.html
@@ -1,4 +1,4 @@
-<mat-grid-list cols="4" gutterSize="20" rowHeight="1:1">
+<!-- <mat-grid-list cols="4" gutterSize="20" rowHeight="1:1">
   <mat-grid-tile *ngFor="let product of products">
     <mat-card [style]="'max-width: 400px'">
       <mat-card-header>
@@ -20,4 +20,5 @@
       </mat-card-actions>
     </mat-card>
   </mat-grid-tile>
-</mat-grid-list>
+</mat-grid-list> -->
+<p>Principal tela - Listagem de produtos</p>
