--- a/distribuidora-front/src/app/app.component.html
+++ b/distribuidora-front/src/app/app.component.html
@@ -3,7 +3,7 @@
     <span class="title" routerLink="/">Distribuidora de Produtos</span>
     <span class="example-spacer"></span>
     <div *ngIf="auth.user$ | async as user">
-      <span style="color: #fff;">Bem vindo, {{ user.name }}</span>
+      <span style="color: #fff">Bem vindo, {{ user.name }}</span>
     </div>
     <button
       mat-icon-button
@@ -11,16 +11,26 @@
       aria-label="Example icon-button with heart icon"
       (click)="abrirCarrinho()"
     >
-      <mat-icon [matBadge]="numberOfItemsInCart" matBadgeColor="warn" style="color: white">shopping_cart_checkout</mat-icon>
+      <mat-icon
+        [matBadge]="numberOfItemsInCart"
+        matBadgeColor="warn"
+        style="color: white"
+        >shopping_cart_checkout</mat-icon
+      >
     </button>
     <ng-container *ngIf="auth.isAuthenticated$ | async; else loggedOut">
-      <button (click)="auth.logout({ returnTo: document.location.origin })">
-        Log out
+      <button
+        mat-icon-button
+        (click)="auth.logout({ returnTo: document.location.origin })"
+      >
+        <mat-icon style="color: white">logout</mat-icon>
       </button>
     </ng-container>
 
     <ng-template #loggedOut>
-      <button (click)="auth.loginWithRedirect()">Log in</button>
+      <button mat-icon-button (click)="auth.loginWithRedirect()">
+        <mat-icon style="color: white">login</mat-icon>
+      </button>
     </ng-template>
   </mat-toolbar>
 </p>
