--- a/distribuidora-front/src/app/components/shopping-cart/shopping-cart.component.html
+++ b/distribuidora-front/src/app/components/shopping-cart/shopping-cart.component.html
@@ -1,13 +1,17 @@
-<mat-selection-list #items>
+<mat-action-list>
   <mat-list-item *ngFor="let item of itemsOfCart">
-    <p>Produto: {{ item.name }} | Preço: {{ item.price }} </p>
+    Produto: {{ item.name }} | Preço: {{ item.price }}
+
+    <button mat-icon-button (click)="remover(item.id)">
+      <mat-icon>delete</mat-icon>
+    </button>
   </mat-list-item>
-</mat-selection-list>
+</mat-action-list>
 
 <mat-card>
   <h2>Resumo do Pedido</h2>
-  <p>{{itemsOfCart.length}} produtos    R$ {{ total }}</p>
-  <button mat-stroked-button color="primary" (click)="informarEndereco()">Informar endereço de entrega</button>
+  <p>{{ itemsOfCart.length }} produtos R$ {{ total }}</p>
+  <button mat-stroked-button color="primary" (click)="informarEndereco()">
+    Informar endereço de entrega
+  </button>
 </mat-card>
-
-
