--- a/distribuidora-front/src/app/components/shopping-cart/shopping-cart.component.html
+++ b/distribuidora-front/src/app/components/shopping-cart/shopping-cart.component.html
@@ -12,6 +12,6 @@
   <h2>Resumo do Pedido</h2>
   <p>{{ itemsOfCart.length }} produtos R$ {{ total }}</p>
   <button mat-stroked-button color="primary" (click)="prosseguirParaCriarPedido()">
-    Informar endereço de entrega
+    Informar dados do pedido
   </button>
 </mat-card>
