--- a/distribuidora-front/src/app/app.component.html
+++ b/distribuidora-front/src/app/app.component.html
@@ -2,22 +2,20 @@
   <mat-toolbar [style.background-color]="'#82846D'">
     <span class="title" routerLink="/">Distribuidora de Produtos</span>
     <span class="example-spacer"></span>
-    <div *ngIf="auth.user$ | async as user">
-      <span style="color: #fff">Bem vindo, {{ user.name }}</span>
-    </div>
+    <span style="color: #fff" (click)="acessarMeusPedidos()">Meus pedidos</span>
     <button
-    mat-icon-button
-    class="example-icon favorite-icon"
-    aria-label="Example icon-button with heart icon"
-    (click)="abrirCarrinho()"
-  >
-    <mat-icon
-      [matBadge]="numberOfItemsInCart"
-      matBadgeColor="warn"
-      style="color: white"
-      >shopping_cart_checkout</mat-icon
+      mat-icon-button
+      class="example-icon favorite-icon"
+      aria-label="Example icon-button with heart icon"
+      (click)="abrirCarrinho()"
     >
-  </button>
+      <mat-icon
+        [matBadge]="numberOfItemsInCart"
+        matBadgeColor="warn"
+        style="color: white"
+        >shopping_cart_checkout</mat-icon
+      >
+    </button>
     <ng-container *ngIf="auth.isAuthenticated$ | async; else loggedOut">
       <button
         mat-icon-button
