--- a/distribuidora-front/src/app/components/main/main.component.html
+++ b/distribuidora-front/src/app/components/main/main.component.html
@@ -6,7 +6,7 @@
       </mat-card-header>
       <img
         mat-card-md-image
-        src="https://material.angular.io/assets/img/examples/shiba2.jpg"
+        src="https://www.imigrantesbebidas.com.br/bebida/images/products/full/222-cerveja-heineken-long-neck-330ml.jpg"
         alt="Photo of a Shiba Inu"
       />
       <mat-card-content>
