--- a/distribuidora-front/src/app/components/shopping-cart/shopping-cart.component.html
+++ b/distribuidora-front/src/app/components/shopping-cart/shopping-cart.component.html
@@ -38,6 +38,6 @@
       </div>
       <div class="total-amount"> {{ total }} </div>
     </div>
-    <button mat-stroked-button class="button" color="primary">Checkout</button>
+    <button mat-stroked-button class="button" color="primary" (click)="prosseguirParaCriarPedido()">Checkout</button>
   </div>
 </div>
