--- a/distribuidora-front/src/app/app.component.html
+++ b/distribuidora-front/src/app/app.component.html
@@ -2,7 +2,7 @@
   <mat-toolbar [style.background-color]="'#82846D'">
     <span class="title" routerLink="/">Distribuidora de Produtos</span>
     <span class="example-spacer"></span>
-    <span style="color: #fff" (click)="acessarMeusPedidos()">Meus pedidos</span>
+    <span class="title" style="color: #fff" routerLink="/my-orders" (click)="acessarMeusPedidos()">Meus pedidos</span>
     <button
       mat-icon-button
       class="example-icon favorite-icon"
