--- a/distribuidora-front/src/app/app.component.css
+++ b/distribuidora-front/src/app/app.component.css
@@ -1,3 +1,7 @@
+mat-toolbar {
+  justify-content: space-between;
+}
+
 .example-spacer {
   flex: 1 1 auto;
 }
@@ -8,4 +12,56 @@
 
 .title:hover {
   cursor: pointer;
+}
+
+/* ===================================== */
+
+.companyName {
+  font-size: 150%;
+}
+
+.mat-toolbar {
+  height: 7vh;
+}
+
+div {
+  overflow: inherit;
+}
+
+a {
+  text-decoration: none;
+  font-size: 110%;
+  white-space: normal;
+}
+
+button {
+  font-size: 110%;
+  min-width: min-content;
+}
+
+.example-icon {
+  padding: 0 14px;
+}
+
+.example-spacer {
+  flex: 1 1 auto;
+}
+
+.mat-sidenav {
+  min-width: 25% !important;
+  width: 25% !important;
+  max-width: 200px !important;
+}
+
+.mat-sidenav-content {
+  text-align: center;
+  margin-top: 10px;
+}
+
+.navbar-items-menu {
+  font-size: 17px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
