--- a/distribuidora-front/src/app/components/shopping-cart/shopping-cart.component.css
+++ b/distribuidora-front/src/app/components/shopping-cart/shopping-cart.component.css
@@ -149,6 +149,14 @@ hr {
   margin-top: 10px;
 }
 
+h2, h3 {
+  text-align: center;
+}
+
+h3:hover {
+  cursor: pointer;
+}
+
 /* .button {
   margin-top: 10px;
   width: 100%;
